# api-docs.json
@@ -35,11 +35,17 @@
         ],
         "responses": {
           "200": {
-            "description": "OK",
+            "description": "Listagem pelo ID",
             "content": {
-              "*/*": {
+              "application/json": {}
+            }
+          },
+          "404": {
+            "description": "Registro não encontrado",
+            "content": {
+              "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/VendasDTO"
+                  "$ref": "#/components/schemas/MessageResponse"
                 }
               }
             }
@@ -75,11 +81,17 @@
         },
         "responses": {
           "200": {
-            "description": "OK",
+            "description": "Alteração concluída",
             "content": {
-              "*/*": {
+              "application/json": {}
+            }
+          },
+          "404": {
+            "description": "Registro não encontrado",
+            "content": {
+              "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/VendasDTO"
+                  "$ref": "#/components/schemas/MessageResponse"
                 }
               }
             }
@@ -105,11 +117,17 @@
         ],
         "responses": {
           "200": {
-            "description": "OK",
+            "description": "Venda Removida",
             "content": {
-              "*/*": {
+              "application/json": {}
+            }
+          },
+          "404": {
+            "description": "Registro não encontrado",
+            "content": {
+              "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/VendasDTO"
+                  "$ref": "#/components/schemas/MessageResponse"
                 }
               }
             }
@@ -126,14 +144,37 @@
         "operationId": "listAll",
         "responses": {
           "200": {
-            "description": "OK",
+            "description": "Listagem geral",
             "content": {
-              "*/*": {
+              "application/json": {}
+            }
+          },
+          "404": {
+            "description": "Registro não encontrado",
+            "content": {
+              "application/json": {
                 "schema": {
-                  "type": "array",
-                  "items": {
-                    "$ref": "#/components/schemas/VendasListaDTO"
-                  }
+                  "$ref": "#/components/schemas/MessageResponse"
+                }
+              }
+            }
+          },
+          "403": {
+            "description": "Acesso negado",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/MessageResponse"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Erro de Negócio",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/MessageResponse"
                 }
               }
             }
@@ -158,11 +199,17 @@
         },
         "responses": {
           "200": {
-            "description": "OK",
+            "description": "Venda inclusa",
             "content": {
-              "*/*": {
+              "application/json": {}
+            }
+          },
+          "404": {
+            "description": "Registro não encontrado",
+            "content": {
+              "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/VendasDTO"
+                  "$ref": "#/components/schemas/MessageResponse"
                 }
               }
             }
@@ -189,14 +236,17 @@
         ],
         "responses": {
           "200": {
-            "description": "OK",
+            "description": "Listagem por nome",
             "content": {
-              "*/*": {
+              "application/json": {}
+            }
+          },
+          "404": {
+            "description": "Registro não encontrado",
+            "content": {
+              "application/json": {
                 "schema": {
-                  "type": "array",
-                  "items": {
-                    "$ref": "#/components/schemas/VendasListaDTO"
-                  }
+                  "$ref": "#/components/schemas/MessageResponse"
                 }
               }
             }
@@ -207,6 +257,57 @@
   },
   "components": {
     "schemas": {
+      "FieldResponse": {
+        "type": "object",
+        "properties": {
+          "attribute": {
+            "type": "string",
+            "description": "Nome do atributo"
+          },
+          "description": {
+            "type": "string",
+            "description": "Descrição da validação"
+          }
+        },
+        "description": "Atributos de validação"
+      },
+      "MessageResponse": {
+        "type": "object",
+        "properties": {
+          "code": {
+            "type": "string",
+            "description": "Código da Mensagem"
+          },
+          "status": {
+            "type": "integer",
+            "description": "Status HTTP",
+            "format": "int32"
+          },
+          "error": {
+            "type": "string",
+            "description": "Descrição erro HTTP"
+          },
+          "message": {
+            "type": "string",
+            "description": "Mensagem de negócio"
+          },
+          "parameters": {
+            "type": "array",
+            "description": "Parâmetros da mensagem",
+            "items": {
+              "type": "object",
+              "description": "Parâmetros da mensagem"
+            }
+          },
+          "attributes": {
+            "type": "array",
+            "description": "Atributos de validação",
+            "items": {
+              "$ref": "#/components/schemas/FieldResponse"
+            }
+          }
+        }
+      },
       "VendasDadosAlteravelDTO": {
         "type": "object",
         "properties": {
@@ -218,92 +319,6 @@
             "format": "int32"
           },
           "valorUnidade": {
-            "type": "number",
-            "format": "double"
-          },
-          "nomeCliente": {
-            "type": "string"
-          },
-          "contatoCliente": {
-            "type": "integer",
-            "format": "int64"
-          },
-          "statusEncomenda": {
-            "type": "string",
-            "enum": [
-              "FINALIZADO",
-              "ENTREGUE",
-              "PENDENTE"
-            ]
-          }
-        }
-      },
-      "VendasDTO": {
-        "type": "object",
-        "properties": {
-          "id": {
-            "type": "integer",
-            "format": "int64"
-          },
-          "dataEncomenda": {
-            "type": "string",
-            "format": "date"
-          },
-          "valorTotal": {
-            "type": "number",
-            "format": "double"
-          },
-          "nomeProduto": {
-            "type": "string"
-          },
-          "qtdVenda": {
-            "type": "integer",
-            "format": "int32"
-          },
-          "valorUnidade": {
-            "type": "number",
-            "format": "double"
-          },
-          "nomeCliente": {
-            "type": "string"
-          },
-          "contatoCliente": {
-            "type": "integer",
-            "format": "int64"
-          },
-          "statusEncomenda": {
-            "type": "string",
-            "enum": [
-              "FINALIZADO",
-              "ENTREGUE",
-              "PENDENTE"
-            ]
-          }
-        }
-      },
-      "VendasListaDTO": {
-        "type": "object",
-        "properties": {
-          "id": {
-            "type": "integer",
-            "format": "int64"
-          },
-          "dataEncomenda": {
-            "type": "string",
-            "format": "date"
-          },
-          "nomeProduto": {
-            "type": "string"
-          },
-          "qtdVenda": {
-            "type": "integer",
-            "format": "int32"
-          },
-          "valorUnidade": {
-            "type": "number",
-            "format": "double"
-          },
-          "valorTotal": {
             "type": "number",
             "format": "double"
           },
