# src/app/api/models.ts
@@ -1,3 +1,4 @@
+export { FieldResponse } from './models/field-response';
+export { MessageResponse } from './models/message-response';
 export { VendasDadosAlteravelDto } from './models/vendas-dados-alteravel-dto';
 export { VendasDto } from './models/vendas-dto';
-export { VendasListaDto } from './models/vendas-lista-dto';
