# src/app/api/models/vendas-lista-dto.ts
@@ -1,13 +1,0 @@
-/* tslint:disable */
-/* eslint-disable */
-export interface VendasListaDto {
-  contatoCliente?: number;
-  dataEncomenda?: string;
-  id?: number;
-  nomeCliente?: string;
-  nomeProduto?: string;
-  qtdVenda?: number;
-  statusEncomenda?: 'FINALIZADO' | 'ENTREGUE' | 'PENDENTE';
-  valorTotal?: number;
-  valorUnidade?: number;
-}
